--- a/_includes/structure/navigation.html
+++ b/_includes/structure/navigation.html
@@ -11,10 +11,7 @@
         <a class="nav-link" href="{{ site.baseurl }}/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="{{site.baseurl}}/about">About</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="{{ site.baseurl}}/explore/">Explore</a>
+        <a class="nav-link" href="{{ site.baseurl}}/libraries/">Libraries</a>
       </li>
     </ul>
   </div>
