--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,27 +75,20 @@ integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeV
     <!-- Nav bars -->
     {% include /structure/navigation.html %}
 
-    <div class="container-fluid head parallax">
-    </div>
-    <div class="container-fluid bg-white text-black text-center">
+    <div class="container-fluid bg-white text-black text-center pt-5">
       <div class="py-2">
         <h1 class="shout lead" id="doc-main-h1">{{page.title}}</h1>
       </div>
     </div>
-    {% include /structure/archived.html %}
 
     {% include /structure/breadcrumbs.html %}
 
     <div class="container">
-      {% if page.url == "/explore/" %}
-        {{ content }}
-      {% elsif page.url == "/objects/" %}
-        {{ content }}
-      {% else %}
+
       <div class="col-12 shadow-sm p-3 mx-auto mb-3 mt-3 ">
+        {% include structure/image.html %}
         {{ content }}
       </div>
-      {% endif %}
     </div>
     <!-- Footer logos -->
     <div class="container-fluid bg-white p-2 container-fluid bg-white border-cambridge">
