--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@ integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeV
 
     <div class="container-fluid bg-white text-black text-center pt-5">
       <div class="py-2">
-        <h1 class="shout lead" id="doc-main-h1">{{page.title}}</h1>
+        <h1 class="shout lead mt-3" id="doc-main-h1">{{page.title}}</h1>
       </div>
     </div>
 
